# samdul06food

./: .firebaserc  Dockerfile  README.md  pyproject.toml
.firebase/: hosting.cHVibGlj.cache
public/: .index.html.swp  index.html
src/samdul06food/: main.py
src/{home_path}/code/data/: food.csv
